--- a/Rscripts/KNN.Rmd
+++ b/Rscripts/KNN.Rmd
@@ -14,6 +14,7 @@ Load required libraries.
 
 ```{r message = FALSE}
 library(dplyr) ## Data wrangling
+library(tidyr) ## Data wrangling
 library(class) ## Includes `knn` function
 library(ggplot2)
 ```
@@ -234,10 +235,26 @@ When I ran this through Kaggle, the accuracy was 0.76555, which was my best scor
 Next, I tried fitting a knn of `Sex`, `Pclass`, and `Age` using `k` values of 1, 5, 9, 13, 17, and 21:
 
 ```{r}
-for(k in seq(1, 21, by = 4)){
+for(k in seq(1, 25, by = 4)){
   out <- my_knn(k = k, predictors = c("Sex", "Pclass", "Age"))
   cat("k =", k, out, "\n")
 }
 ```
 
-I haven't checked all of these in Kaggle yet, because I reached my submission limit for the day.
+Here's a graph showing how the accuracy of the model changes, both within the training and testing (Kaggle leaderboard) data, as k changes: 
+
+```{r fig.width = 5, fig.height = 2.5}
+diff_ks <- data.frame(k = seq(1, 25, by = 4),
+                      Training = c(0.86420, 0.81818, 0.80808, 
+                                0.80359, 0.79798, 0.78788,
+                                0.77890),
+                      Leaderboard = c(0.73206, 0.73206, 0.74641,
+                                      0.74163, 0.75120, 0.77033,
+                                      0.76555))
+diff_ks <- gather(diff_ks, Type, Accuracy, -k)
+ggplot(diff_ks, aes(x = k, y = Accuracy, group = Type, color = Type)) + 
+  geom_line() + theme_minimal()
+```
+
+
+
