--- a/Syllabus/CourseSyllabus.tex
+++ b/Syllabus/CourseSyllabus.tex
@@ -167,6 +167,8 @@ Johnson: Chs. 11, 12.1-3, 14.1-2.\\
   classification models. Classification models: ensemble models
   (bagging, random forest, boosting).\\
 \emph{Reading:} James et al.: Chs. 5, 8.2. Kuhn and Johnson: Ch. 14.3-7.\\
+\emph{Tuesday assignment:} Try using cross-validation, either to tune certain paramters in a model (e.g., k in k-NN), or to compare the performance of different models\\ 
+\emph{Thursday assignment:} Try fitting the following types of ensemble models: bagging, boosting, random forests. Can you get any to beat the to-date class best (~0.8)?\\
 \emph{Competition:} Kaggle: Surviving the Titanic
 
 \item \textbf{Week 4:} Classification models: support vector
