--- a/Syllabus/CourseSyllabus.tex
+++ b/Syllabus/CourseSyllabus.tex
@@ -174,6 +174,8 @@ Johnson: Chs. 11, 12.1-3, 14.1-2.\\
 \item \textbf{Week 4:} Classification models: support vector
   machines.\\
 \emph{Reading:} James et al.: Ch. 9\\
+\emph{Tuesday assignment:} Try to fit a SVM model to the Titanic data\\
+\emph{Thursday assignment:} Present 5 slides on your work on the Titanic prediction as well as a short write-up describing your work on the challenge.\\
 \emph{Competition:} Kaggle: Surviving the Titanic\\
 \textbf{Graded products:} Students present final predictive model for Titanic
 competition.
