--- a/Syllabus/CourseSyllabus.tex
+++ b/Syllabus/CourseSyllabus.tex
@@ -185,7 +185,7 @@ competition.
   for severe class imbalance; Feature selection\\
 \emph{Reading:} Kuhn and Johnson: Chs. 3, 4, 16, 19\\
 \textbf{Graded products:} Students presentations on material from chapters in Kuhn and
-Johnson 2013.\\
+Johnson 2013. Presentations are (all from Kuhn and Johnson): Ch. 3.1-3.3: Casey; Ch. 3.4-3.7: Veronica; Ch. 4.6-4.8: WanDe; Ch. 16.1-16.7: Julia; 19.1-3: Ahmet\\
 
 \item \textbf{Week 6:} Assessing performance of regression
   models. Regression models: Linear regression models. Over-fitting
